# pipineapple

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  run-as-root.sh  run.py
app/: __init__.py  config.py
app/modules/: __init__.py
app/modules/example/: __init__.py  module.toml  routes.py
app/modules/example/templates/: example.html
app/modules/mitm/: __init__.py  module.toml  routes.py  service.py
app/modules/mitm/templates/: mitm.html
app/modules/mitm/tools/: __init__.py  bettercap.py
app/modules/nmap_scan/: __init__.py  module.toml  routes.py  service.py
app/modules/nmap_scan/templates/: nmap.html
app/modules/nmap_scan/tools/: __init__.py  nmap.py
app/routes/: __init__.py  auth.py  campaigns.py  crack.py  dashboard.py  debug.py  handshakes.py  learning.py  modules.py  pineap.py  recon.py  settings.py
app/services/: __init__.py  access_control.py  adapters.py  auth.py  campaigns.py  captive_portal.py  captive_sentinel.py  client_recon.py  crack.py  crack_targets.py  evil_wpa.py  handshakes.py  job_manager.py  karma.py  learning.py  modules.py  networking.py  notifications.py  pineap.py  recon.py  sysinfo.py  sysinfo_broadcaster.py  terminal.py
app/static/: app.js  campaigns.js  handshakes.js  modules.js  pineap.js  recon.js  settings.js  style.css
app/templates/: _interface_rows.html  _wireless_rows.html  base.html  campaigns.html  dashboard.html  handshakes.html  learning.html  modules.html  pineap.html  recon.html  settings.html
app/templates/auth/: login.html  setup.html
app/tools/: __init__.py  _common.py  aireplay.py  airodump.py  beacon_parser.py  dnsmasq.py  ethtool.py  handshake_detector.py  hcxdumptool.py  hcxpcapngtool.py  hostapd.py  hostapd_cli.py  iproute.py  iptables.py  iw.py  nm.py  power.py  proc.py  rfkill.py  udev.py  vcgencmd.py  wpa_crypto.py
deploy/: install-service.sh  pipineapple.service
docs/: phase-H-metasploit-sketch.md
sessions/: HARDWARE-TEST-CHECKLIST.md  session-01.md  session-02.md  session-04.5.md  session-04.6.md  session-04.7.md  session-04.8.md  session-04.9.md  session-04.md  session-05.md  session-06.md  session-07.md  session-08.md  session-09.md  session-10.md  session-11.md  session-12-handoff.md  session-12.5.md  session-12.md  session-13.md  session-14.md  session-15.md  session-16.md  session-17.md
tests/: test_job_manager.py  test_notifications.py
