[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipineapple"
version = "0.1.0"
description = "DIY WiFi Pineapple platform for Raspberry Pi 5 — UI-first wireless pen-testing"
authors = [{name = "Nishit"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
realtime = [
    # Added in Session 02 when we wire up WebSockets
    "flask-socketio>=5.3",
    "eventlet>=0.35",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # let formatter handle line length
