[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipineapple"
version = "0.1.0"
description = "DIY WiFi Pineapple platform for Raspberry Pi 5 — UI-first wireless pen-testing"
authors = [{name = "Nishit"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    # simple-websocket gives python-engineio real WebSocket transport
    # support in threading async mode (otherwise the werkzeug dev server
    # raises AssertionError on the upgrade handshake — see Session 02).
    "simple-websocket>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Eventlet/gevent are alternate async backends for Flask-SocketIO; we use
# the built-in 'threading' mode for our single-user lab setup and don't
# install them by default. Keep this extra around for the eventual
# nginx/gunicorn deployment (Session 19) where eventlet workers help.
production = [
    "eventlet>=0.35",
    "gunicorn>=21.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # let formatter handle line length
